--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -9,9 +9,10 @@
         <div class="col-xs-6 col-md-3">
           <h6>Mappa del sito</h6>
           <ul class="footer-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Clienti</a></li>
-            <li><a href="#">Aggiungi clienti</a></li>
+            <li><a href="#" [routerLink]="['']">Home</a></li>
+            <li><a href="#" [routerLink]="['/Clients']">Clienti</a></li>
+            <li><a href="#" [routerLink]="['/AddClient']">Aggiungi clienti</a></li>
+            <li><a href="#" [routerLink]="['/Fatture']">Fatture</a></li>
           </ul>
         </div>
 
@@ -41,7 +42,7 @@
             <li><a class="facebook" href="#"><i class="bi bi-facebook"></i></a></li>
             <li><a class="twitter" href="#"><i class="bi bi-twitter"></i></a></li>
             <li><a class="instagram" href="#"><i class="bi bi-instagram"></i></a></li>
-            <li><a class="linkedin" href="#"><i class="bi bi-linkedin"></i></a></li>   
+            <li><a class="linkedin" href="https://www.linkedin.com/in/fabio-g-0b1910168/" target="_blank"><i class="bi bi-linkedin"></i></a></li>   
           </ul>
         </div>
       </div>
