--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <br>
-<div class="card mb-3 float-right" style="max-width: 1070px;">
+<div class="card mb-3 float-right shadow-lg" style="max-width: 1070px;">
     <div class="row g-0">
         <div class="col-md-4">
             <img src="https://i.ibb.co/0q9qtLG/epicode-720.jpg" class="img-fluid rounded" alt="...">
@@ -15,7 +15,7 @@
         </div>
     </div>
 </div>
-<div class="card mb-3 float-left" style="max-width: 1070px;">
+<div class="card mb-3 float-left shadow-lg" style="max-width: 1070px;">
     <div class="row g-0">
         <div class="col-md-8">
             <div class="card-body">
@@ -29,7 +29,7 @@
           </div>
     </div>
 </div>
-<div class="card mb-3 float-right" style="max-width: 1070px;">
+<div class="card mb-3 float-right shadow-lg" style="max-width: 1070px;">
     <div class="row g-0">
         <div class="col-md-4">
             <img src="https://i.ibb.co/HH5qpxC/maxresdefault-1.jpg" class="img-fluid rounded" alt="...">
@@ -43,14 +43,13 @@
         </div>
     </div>
 </div>
-<div class="card mb-3 float-left" style="max-width: 1070px;">
+<div class="card mb-3 float-left shadow-lg" style="max-width: 1070px;">
     <div class="row g-0">
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional
-                    content. This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">Diventa web developer in 3 mesi. Poi ti mandiamo a lavorare.</h5>
+                <p class="card-text"><strong>&lt;/pazzesco&gt;</strong><br>
+                    Noi di EPICODE crediamo in te. Tu puoi credere in noi: paghi solo metà corso; l’altra metà quando inizi a lavorare. Sì, è pazzesco. Ed è vero.</p>
             </div>
         </div>
         <div class="col-md-4">
@@ -59,35 +58,35 @@
     </div>
 </div>
 <br>
-<div class="container text-center">
-    <h1>colori di Bootstrap</h1>
-    <p> Bootstrap utilizza dei nomi di variabili CSS per definire 12 colori principali, da utilizzare nel suo sistema di stilizzazione dei contenuti.<br> Fai click sul button qui sotto per visualizzare le classi di colore Bootstrap</p>
-    <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#finestraModale">CLASSI DI COLORE</button>
-    <div class="modal fade" id="finestraModale">
+<div class="container text-center text-white">
+    <h1>Come funziona il nostro corso</h1>
+    <button type="button" class="btn btn-grad shadow-lg" data-toggle="modal" data-target="#finestraModale"> I NOSTRI 4 STEP </button>
+    <div class="modal fade text-dark" id="finestraModale">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h3 class="modal-title">I colori di Bootstrap</h3>
+            <h3 class="modal-title text-center">I NOSTRI 4 STEP </h3>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
           <div class="modal-body">
-            <h4 class="text-primary">.PRIMARY</h4>
-            <h4 class="text-secondary">.SECONDARY</h4>
-            <h4 class="text-success">.SUCCESS</h4>
-            <h4 class="text-warning">.WARNING</h4>
-            <h4 class="text-danger">.DANGER</h4>
-            <h4 class="text-info">.INFO</h4>
-            <h4 class="text-muted">.MUTED</h4>
-            <h4 class="text-body">.BODY</h4>
-            <h4 class="text-white bg-dark">.WHITE</h4>
-            <h4 class="text-light bg-dark">.LIGHT</h4>
-            <h4 class="text-black-50">.BLACK-50</h4>
-            <h4 class="text-light-50">.BLACK-50</h4>
+            <h1><i class="bi bi-laptop"></i></h1>
+            <h2><i>Impara.</i> Da dove vuoi</h2>
+            <h5>Niente aule fisiche. Il corso è al 100% online. Ti basta un PC e puoi studiare da qualsiasi posto.</h5><br>
+            <h1><i class="bi bi-keyboard"></i></h1>
+            <h2><i>Fai.</i> 70% di pratica</h2>
+            <h5>Per imparare devi fare. Per questo la maggior parte del corso EPICODE è basato sulla pratica.</h5><br>
+            <h1><i class="bi bi-mortarboard"></i></h1>
+            <h2><i>Confrontati.</i> Con i nostri guru</h2>
+            <h5>Tu studia dove vuoi, noi ti seguiamo: avrai degli specialisti a tua disposizione con cui confrontarti ogni giorno.</h5><br>
+            <h1><i class="bi bi-handbag"></i></h1>
+            <h2><i>Lavora.</i> Subito</h2>
+            <h5>Trovi lavoro subito dopo il corso. Altrimenti lo paghi solo a metà. Sì, siamo l’unicorno della formazione</h5>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal">CHIUDI</button>
+            <button type="button" class="btn btn-danger hoverable form-control" data-dismiss="modal">CHIUDI</button>
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </div><br>
+  
