--- a/src/app/add-client/add-client.component.html
+++ b/src/app/add-client/add-client.component.html
@@ -1,5 +1,8 @@
-<div class="bg bg-light rounded">
-<h2 class="m-auto text-center">Aggiungi un nuovo cliente</h2><br>
+<br>
+<div class="form-group">
+    <img src="https://i.ibb.co/BwJ7CDG/aggcli.png" class="img-fluid rounded" >
+    </div>
+<div class="bg bg-dark rounded text-white">
 <form class="my-3">
     <div class="form-group">
         <label>Ragione Sociale</label>
@@ -53,7 +56,7 @@
     </div>
     <h4><b>Indirizzo sede operativa</b></h4>
     <b>Comune:</b>
-    <!--chiamata ajax per comuni-->
+
     <div class="form-group">
 
         <div class="form-row">
@@ -78,7 +81,7 @@
     </div>
     <h4><b>Indirizzo sede legale</b></h4>
     <b>Comune:</b>
-    <!--chiamata ajax per comuni-->
+
     <div class="form-group">
 
         <div class="form-row">
@@ -113,56 +116,9 @@
         <label for="website">Fatturato Annuale</label>
         <input type="text" class="form-control" id="website">
     </div>
-
-    <div class="form-group">
-        <button type="button" class="btn btn-success form-control" (click)="addNewClient()">Aggiungi</button>
-    </div>
 </form>
 </div>
 
-<!--<form>
-    <h3>Indirizzo sede operativa</h3>
-    <div class="form-group">
-
-        <div class="form-row">
-            <div class="col">
-                <label for="formGroupExampleInput2">Via</label>
-                <input type="text" class="form-control" placeholder="First name">
-            </div>
-            <div class="col">
-                <label for="formGroupExampleInput2">Civico</label>
-                <input type="text" class="form-control" placeholder="First name">
-            </div>
-            <div class="col">
-                <label for="formGroupExampleInput2">Cap</label>
-                <input type="text" class="form-control" placeholder="First name">
-            </div>
-            <div class="col">
-                <label for="formGroupExampleInput2">Località</label>
-                <input type="text" class="form-control" placeholder="First name">
-            </div>
-        </div>
-
-    </div>
-</form>
-<form>
-    <div class="form-group">
-        <label for="formGroupExampleInput2">Comune</label>
-        <div class="form-row">
-            <div class="col">
-                <label for="formGroupExampleInput2">Nome comune</label>
-                <input type="text" [(ngModel)]="client.indirizzoSedeLegale.via" class="form-control"
-                    placeholder="First name">
-            </div>
-            <div class="col">
-                <label for="formGroupExampleInput2">Provincia</label>
-                <input type="text" [(ngModel)]="client.indirizzoSedeLegale.localita" class="form-control"
-                    placeholder="First name">
-            </div>
-        </div>
-
-    </div>
-    <div class="form-group">
-        <button type="button" class="btn btn-secondary btn-sm" (click)="addNewClient()">i</button>
-    </div>
-</form>-->
+<div class="form-group">
+    <button type="button" class="btn btn-success form-control" (click)="addNewClient()">Aggiungi</button>
+</div>
