--- a/src/app/clients-table/clients-table.component.html
+++ b/src/app/clients-table/clients-table.component.html
@@ -1,4 +1,5 @@
-<table class="table table-striped bg-light rounded">
+<br>
+<table class="table table-dark table-striped rounded">
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -16,9 +17,8 @@
             <td>{{item.cognomeContatto}}</td>
             <td>{{item.telefono}}</td>
             <td>{{item.emailContatto}}</td>
-                <button type="button" class="btn btn-primary btn-sm" (click)="detailClient(item)"><i class="bi bi-pencil-square"></i></button>
-                &nbsp;
-                <button type="button" class="btn btn-danger btn-sm"><i class="bi bi-x-square"></i></button>
+            <td><button type="button" class="btn btn-primary btn-sm" (click)="detailClient(item)">Info &nbsp;<i class="bi bi-pencil-square"></i></button></td> 
+            <td><button type="button" class="btn btn-danger btn-sm">Elimina &nbsp;<i class="bi bi-x-square"></i></button></td>    
         </tr>
     </tbody>
 </table>
