--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,21 +7,27 @@
             <div class="col-md-12 col-sm-12">
             </div>
         </div>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark justify-content-center rounded">
+        <nav class="navbar navbar-expand-md navbar-dark justify-content-center rounded">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-center" id="menu">
-                <div class="collapse navbar-collapse justify-content-end" id="menu">
+                <div class="collapse navbar-collapse justify-content-center" id="menu">
                     <ul class="navbar-nav float-left">
                         <li class="nav-item">
-                            <a href="#" [routerLink]="['']" class="nav-link active">Home</a>
-                        </li>
+                            <a href="#" [routerLink]="['']" class="nav-link active bn39"><span class="bn39span">Home</span></a>
+                        </li>&nbsp;
                         <li class="nav-item">
-                            <a href="#" class="nav-link" [routerLink]="['/Clients']">Clienti</a>
-                        </li>
+                            <a href="#" class="nav-link bn39" [routerLink]="['/Clients']"><span class="bn39span">Clienti</span></a>
+                        </li>&nbsp;
                         <li class="nav-item">
-                            <a href="#" class="nav-link" [routerLink]="['/AddClient']">Aggiungi clienti</a>
+                            <a href="#" class="nav-link bn39" [routerLink]="['/Fatture']"><span class="bn39span">Fatture</span></a>
+                        </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                        <li class="nav-item">
+                            <a href="#" class="nav-link bn39" [routerLink]="['/AddClient']"><span class="bn39span"><i class="bi bi-plus-circle"></i>&nbsp;Clienti</span></a>
+                        </li>&nbsp;
+                        <li class="nav-item">
+                            <a href="#" class="nav-link bn39" [routerLink]="['/AddFatture']"><span class="bn39span"><i class="bi bi-plus-circle"></i>&nbsp;Fatture</span></a>
                         </li>
                     </ul>
                 </div>
