--- a/src/app/add-fattura/add-fattura.component.html
+++ b/src/app/add-fattura/add-fattura.component.html
@@ -20,5 +20,5 @@
 </form>
 </div>
 <div class="form-group">
-<button type="button" class="form-control btn btn-success" (click)="addNewFattura()">Aggiungi</button>
+<button type="button" class="form-control btn" (click)="addNewFattura()">Aggiungi</button>
 </div>
