--- a/src/app/client-details/client-details.component.html
+++ b/src/app/client-details/client-details.component.html
@@ -43,11 +43,13 @@
         <button type="button" class="btn btn-warning form-control" (click)="editClient(client)">Modifica</button>
     </div>
 </div>
-        </div>
+    <img src="https://media3.giphy.com/media/m31bBkKBQV8v6/giphy.gif?cid=ecf05e477n0l8lpj4diha6sbb2bii3y1emvr5fcg4tfqrgj4&rid=giphy.gif&ct=g" class="img-fluid rounded" width="76%"></div>
         <br>
 <div class="col-6">
     <br>
-    <img src="https://i.giphy.com/media/eoxomXXVL2S0E/giphy.webp" class="img-fluid rounded" alt="...">
+    <img src="https://i.giphy.com/media/eoxomXXVL2S0E/giphy.webp" class="img-fluid rounded"><br><br><br>
+    <img src="https://media4.giphy.com/media/119pLwyWg8ScTK/giphy.webp" class="img-fluid rounded" width="61%"><br><br><br>
+    <img src="https://media2.giphy.com/media/LQ23cCrDbP3ZTRWPEc/giphy.webp" class="img-fluid rounded" width="61%"><br><br>
   </div>
 </div>
-</div>
+</div><br>
