--- a/src/app/fattura-details/fattura-details.component.html
+++ b/src/app/fattura-details/fattura-details.component.html
@@ -1,3 +1,6 @@
+<div class="container">
+    <div class="row">
+        <div class="col-6">
 <div class="card text-dark bg-white my-3 border-primary" style="max-width: 35rem;">
     <div class="card-header bg-dark text-white text-center"><h2>{{fattura.cliente.nomeContatto}} {{fattura.cliente.cognomeContatto}}</h2></div>
     <div class="card-body">
@@ -14,3 +17,11 @@
         <button type="button" class="btn btn-warning form-control" (click)="editFattura(fattura)">Modifica</button>
     </div>
 </div>
+        </div>
+        <div class="col-6">
+            <br>
+            <img src="https://media0.giphy.com/media/gTURHJs4e2Ies/giphy.webp" class="img-fluid rounded"><br><br>
+            <img src="https://media0.giphy.com/media/OTg4nrmU8vkty/giphy.webp" class="img-fluid rounded" width="91.5%">
+        </div>
+    </div>
+</div><br>
