--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,19 +15,13 @@
                 <div class="collapse navbar-collapse justify-content-center" id="menu">
                     <ul class="navbar-nav float-left">
                         <li class="nav-item">
-                            <a href="#" [routerLink]="['']" class="nav-link active bn39"><span class="bn39span">Home</span></a>
+                            <a href="#" [routerLink]="['']" class="nav-link active bn39 zoom"><span class="bn39span">Home</span></a>
                         </li>&nbsp;
                         <li class="nav-item">
-                            <a href="#" class="nav-link bn39" [routerLink]="['/Clients']"><span class="bn39span">Clienti</span></a>
+                            <a href="#" class="nav-link bn39 zoom" [routerLink]="['/Clients']"><span class="bn39span">Clienti</span></a>
                         </li>&nbsp;
                         <li class="nav-item">
-                            <a href="#" class="nav-link bn39" [routerLink]="['/Fatture']"><span class="bn39span">Fatture</span></a>
-                        </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                        <li class="nav-item">
-                            <a href="#" class="nav-link bn39" [routerLink]="['/AddClient']"><span class="bn39span"><i class="bi bi-plus-circle"></i>&nbsp;Clienti</span></a>
-                        </li>&nbsp;
-                        <li class="nav-item">
-                            <a href="#" class="nav-link bn39" [routerLink]="['/AddFatture']"><span class="bn39span"><i class="bi bi-plus-circle"></i>&nbsp;Fatture</span></a>
+                            <a href="#" class="nav-link bn39 zoom" [routerLink]="['/Fatture']"><span class="bn39span">Fatture</span></a>
                         </li>
                     </ul>
                 </div>
