--- a/src/app/add-client/add-client.component.html
+++ b/src/app/add-client/add-client.component.html
@@ -1,4 +1,4 @@
-<br>
+
 <div class="form-group">
     <img src="https://i.ibb.co/BwJ7CDG/aggcli.png" class="img-fluid rounded" >
     </div>
@@ -118,7 +118,6 @@
     </div>
 </form>
 </div>
-
 <div class="form-group">
-    <button type="button" class="btn btn-success form-control" (click)="addNewClient()">Aggiungi</button>
+    <button type="button" class="btn form-control" (click)="addNewClient()">Aggiungi</button>
 </div>
