--- a/src/app/clients-table/clients-table.component.html
+++ b/src/app/clients-table/clients-table.component.html
@@ -1,5 +1,7 @@
-<br>
-<table class="table table-dark table-striped rounded">
+<div class="form-group">
+    <img src="https://i.ibb.co/qW8FHzF/RC.png" class="img-fluid rounded">
+    </div>
+<table class="table table-dark table-striped">
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -8,6 +10,7 @@
             <th scope="col">Phone</th>
             <th scope="col">Email</th>
             <th scope="col">Opzioni</th>
+            <th scope="col"><a href="#" class="nav-link bn39" [routerLink]="['/AddClient']"><span class="bn39span"><i class="bi bi-plus-circle"></i>&nbsp;Clienti</span></a></th>
         </tr>
     </thead>
     <tbody>
@@ -17,8 +20,8 @@
             <td>{{item.cognomeContatto}}</td>
             <td>{{item.telefono}}</td>
             <td>{{item.emailContatto}}</td>
-            <td><button type="button" class="btn btn-primary btn-sm" (click)="detailClient(item)">Info &nbsp;<i class="bi bi-pencil-square"></i></button></td> 
-            <td><button type="button" class="btn btn-danger btn-sm">Elimina &nbsp;<i class="bi bi-x-square"></i></button></td>    
+            <td><button type="button" class="btn1 btn-sm" (click)="detailClient(item)">Info &nbsp;<i class="bi bi-search"></i></button></td> 
+            <td><button type="button" class="btn2 btn-sm">Elimina &nbsp;<i class="bi bi-x-square"></i></button></td>    
         </tr>
     </tbody>
 </table>
