--- a/src/app/fattura-table/fattura-table.component.html
+++ b/src/app/fattura-table/fattura-table.component.html
@@ -1,5 +1,7 @@
-<br>
-<table class="table table-dark table-striped rounded">
+<div class="form-group">
+    <img src="https://i.ibb.co/tJVbLMs/RF.png" class="img-fluid rounded">
+    </div>
+<table class="table table-dark table-striped">
     <thead>
         <tr>
             <th scope="col">#</th>
@@ -9,6 +11,7 @@
             <th scope="col">Importo</th>
             <th scope="col"></th>
             <th scope="col">Opzioni</th>
+            <th scope="col"><a href="#" class="nav-link bn39" [routerLink]="['/AddFatture']"><span class="bn39span"><i class="bi bi-plus-circle"></i>&nbsp;Fatture</span></a></th>
         </tr>
     </thead>
     <tbody>
@@ -18,8 +21,8 @@
             <td>{{item.numero}}</td>
             <td>{{item.anno}}</td>
             <td>{{item.importo}}</td>&nbsp;
-            <td><button type="button" class="btn btn-primary btn-sm" (click)="detailFattura(item)">Info &nbsp;<i class="bi bi-binoculars-fill"></i></button></td>
-            <td><button type="button" class="btn btn-danger btn-sm mx-1" (click)="removeFattura(item)">Elimina &nbsp;<i class="bi bi-x-square"></i></button></td>
+            <td><button type="button" class="btn1 btn-sm" (click)="detailFattura(item)">Info &nbsp;<i class="bi bi-search"></i></button></td>
+            <td><button type="button" class="btn2 btn-sm mx-1" (click)="removeFattura(item)">Elimina &nbsp;<i class="bi bi-x-square"></i></button></td>
         </tr>
     </tbody>
 </table>
