--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <br>
-<div class="card mb-3 float-right shadow-lg" style="max-width: 1070px;">
+<div class="card mb-3 float-right shadow-lg zoom" style="max-width: 1070px;">
     <div class="row g-0">
         <div class="col-md-4">
             <img src="https://i.ibb.co/0q9qtLG/epicode-720.jpg" class="img-fluid rounded" alt="...">
@@ -15,7 +15,7 @@
         </div>
     </div>
 </div>
-<div class="card mb-3 float-left shadow-lg" style="max-width: 1070px;">
+<div class="card mb-3 float-left shadow-lg zoom" style="max-width: 1070px;">
     <div class="row g-0">
         <div class="col-md-8">
             <div class="card-body">
@@ -29,7 +29,7 @@
           </div>
     </div>
 </div>
-<div class="card mb-3 float-right shadow-lg" style="max-width: 1070px;">
+<div class="card mb-3 float-right shadow-lg zoom" style="max-width: 1070px;">
     <div class="row g-0">
         <div class="col-md-4">
             <img src="https://i.ibb.co/HH5qpxC/maxresdefault-1.jpg" class="img-fluid rounded" alt="...">
