--- a/src/app/edit-clients/edit-clients.component.html
+++ b/src/app/edit-clients/edit-clients.component.html
@@ -1,20 +1,20 @@
 <div class="form-group">
     <img src="https://i.ibb.co/VHcWtfb/modcli.png" class="img-fluid rounded">
     </div>
-<div class="bg bg-white rounded border-primary">
+<div class="bg bg-dark text-white rounded border-primary">
     <form class="my-3">
         <div class="form-group">
-            <label>Ragione Sociale</label>
+            <label>Ragione Sociale:</label>
             <input type="text" [(ngModel)]="client.ragioneSociale" name="ragioneSociale" class="form-control"
                 placeholder="name">
         </div>
         <div class="form-group">
-            <label>Partita Iva</label>
+            <label>Partita Iva:</label>
             <input type="text" [(ngModel)]="client.partitaIva" name="partitaIva" class="form-control"
                 placeholder="lastname">
         </div>
         <div class="form-group">
-            <label>Tipo cliente</label>
+            <label>Tipo cliente:</label>&nbsp;
             <select [(ngModel)]="client.tipoCliente" [ngModelOptions]="{standalone: true}">
                 <option *ngFor="let item of tipoCliente" [ngValue]="item">
                     {{item}}
@@ -22,38 +22,38 @@
             </select>
         </div>
         <div class="form-group">
-            <label>Email</label>
+            <label>Email;</label>
             <input type="text" [(ngModel)]="client.email" name="email" class="form-control" placeholder="email">
         </div>
         <div class="form-group">
-            <label>Pec</label>
+            <label>PEC:</label>
             <input type="text" [(ngModel)]="client.pec" name="pec" class="form-control" placeholder="Pec">
         </div>
         <div class="form-group">
-            <label>Telefono</label>
+            <label>Telefono:</label>
             <input type="text" [(ngModel)]="client.telefono" name="telefono" class="form-control" placeholder="Telefono">
         </div>
         <div class="form-group">
-            <label>Nome Contatto</label>
+            <label>Nome contatto:</label>
             <input type="text" [(ngModel)]="client.nomeContatto" name="nomeContatto" class="form-control"
                 placeholder="nome contatto">
         </div>
         <div class="form-group">
-            <label>Cognome Contatto</label>
+            <label>Cognome contatto:</label>
             <input type="text" [(ngModel)]="client.cognomeContatto" name="cognomeContatto" class="form-control"
                 placeholder="Cognome Contatto">
         </div>
         <div class="form-group">
-            <label>Telefono Contatto</label>
+            <label>Telefono contatto:</label>
             <input type="text" [(ngModel)]="client.telefonoContatto" name="telefonoContatto" class="form-control"
                 placeholder="Telefono Contatto">
         </div>
         <div class="form-group">
-            <label>email Contatto</label>
+            <label>Email contatto:</label>
             <input type="text" [(ngModel)]="client.emailContatto" name="emailContatto" class="form-control"
                 placeholder="email">
-        </div>
-        <h4><b>Indirizzo sede operativa</b></h4>
+        </div><br>
+        <h4 class="text-center"><b>Indirizzo sede operativa</b></h4>
         <b>Comune:</b>
         <div class="form-group">
     
@@ -77,8 +77,8 @@
                 </div>
             </div>
     
-        </div>
-        <h4><b>Indirizzo sede legale</b></h4>
+        </div><br>
+        <h4 class="text-center"><b>Indirizzo sede legale</b></h4>
         <b>Comune:</b>
         <div class="form-group">
     
@@ -99,8 +99,8 @@
                     <label>Località</label>
                     <input type="text" class="form-control" placeholder="Località">
                 </div>
-            </div>
-    
+            </div><br>
+    <hr>
         </div>
         <div class="form-group">
             <label for="website">Data Inserimento</label>
